# meta-tac-toe

./: LICENSE  README.md  meta-tac-toe.cabal
src/: Game.hs  Main.hs
